--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MIDTRANS_SERVER_KEY = "SB-Mid-server-x09PJh0Besq8koFRM3E2yFn1"
+MIDTRANS_CLIENT_KEY = "SB-Mid-client-8pIcAXOW01ac-9N4"
+MIDTRANS_IS_PRODUCTION = false
+MIDTRANS_IS_SANITIZED = true
+MIDTRANS_IS_3DS = true
